# routes/auth.js
@@ -1,10 +1,11 @@
 const express = require('express');
 const router = express.Router();
-
 const authController = require('../controllers/auth.js');
 
-router.post('/register', authController.register);
-router.post('/login', authController.login);
+router.get('/login', authController.login);
 
+router.get('/auth/github/callback', authController.githubCallback);
+
+router.get('/logout', authController.logout);
 
 module.exports = router;
